--- a/styles/core.css
+++ b/styles/core.css
@@ -89,12 +89,16 @@ ul {
 	
 	#primary-footer {
 		font-size: 1.3em;
-		margin: 80px 0 80px 0;
+		margin: 80px 0 20px 0;
 		padding: 20px 30px 0 30px;
 	}
 	
 	#text-editor {
 		padding: 3px 10px 11px 10px;
+	}
+
+	#secondary-footer {
+		font-size: 1.4em;
 	}
 
 }
@@ -125,7 +129,7 @@ ul {
 	
 	#primary-footer {
 		font-size: 1.3em;
-		margin: 80px 0 80px 0;
+		margin: 80px 0 20px 0;
 		padding: 20px 30px 0 30px;
 	}
 	
