--- a/styles/core.css
+++ b/styles/core.css
@@ -30,6 +30,7 @@ body {
 }
 
 #primary-section {
+	font-size: 1.5em;
 	margin: 80px 0 80px 0;
 	padding: 0 30px 0 30px;
 }
@@ -39,7 +40,7 @@ body {
 	color: #01b5b8;
 	font-size: 1.7em;
 	margin: 20px 0 0 0;
-	padding: 20px 30px 0 30px;
+	padding: 20px 20px 0 20px;
 }
 
 #contentinfo {
@@ -59,8 +60,17 @@ body {
 	padding: 0 30px 0 30px;
 }
 
+a {
+	color: #01b5b8;
+}
+
 ul {
 	list-style-type: none;
+}
+
+.arrow-img {
+	display: block;
+	margin: 0 auto;
 }
 
 @media (max-width: 830px) {
