--- a/styles/core.css
+++ b/styles/core.css
@@ -30,9 +30,20 @@ body {
 }
 
 #primary-section {
-	font-size: 1.5em;
-	margin: 80px 0 80px 0;
+	margin: 60px 0 60px 0;
 	padding: 0 30px 0 30px;
+}
+
+.main-content {
+	background-color: #01b5b8;
+	border: 1px solid #c0c0c0;
+	border-radius: 5px;
+	color: #f0f0f0;
+	cursor: pointer;
+	font-size: 2em;
+	padding: 40px 15px 40px 15px;
+	margin: 20px 0 20px;
+	text-align: center;
 }
 
 #primary-footer {
@@ -135,6 +146,12 @@ ul {
 	#primary-section {
 		margin: 20px 0 20px 0;
 		padding: 0 30px 0 30px;
+	}
+
+	.main-content {
+		font-size: 1.5em;
+		padding: 20px 15px 20px 15px;
+		margin: 20px 0 20px;
 	}
 	
 	#primary-footer {
