--- a/styles/core.css
+++ b/styles/core.css
@@ -1,5 +1,7 @@
 body {
 	background-color: #f0f0f0;
+	border-top: 3px solid #c0c0c0;
+	border-bottom: 3px solid #c0c0c0;
 	color: #2b2b2b;
     font-family: 'Open Sans Condensed', sans-serif;
 }
