--- a/styles/core.css
+++ b/styles/core.css
@@ -38,14 +38,18 @@ body {
 
 .main-content {
 	background-color: #01b5b8;
-	border: 1px solid #c0c0c0;
 	border-radius: 5px;
 	color: #f0f0f0;
 	cursor: pointer;
 	font-size: 2em;
-	padding: 40px 15px 40px 15px;
+	line-height: 5px;
+	padding: 10px 15px 10px 15px;
 	margin: 20px 0 20px;
 	text-align: center;
+}
+
+.main-content-heading {
+	font-size: 2em;
 }
 
 .main-content:hover {
@@ -85,9 +89,13 @@ ul {
 	list-style-type: none;
 }
 
-.arrow-img {
+#arrow-img {
 	display: block;
 	margin: 0 auto;
+}
+
+#semantics {
+	padding: 0 0 15px 0;
 }
 
 @media (max-width: 830px) {
@@ -112,6 +120,10 @@ ul {
 	#primary-section {
 		margin: 80px 0 20px 0;
 		padding: 0 30px 0 30px;
+	}
+
+	.main-content-heading {
+		font-size: 1.5em;
 	}
 	
 	#primary-footer {
