--- a/styles/core.css
+++ b/styles/core.css
@@ -1,30 +1,44 @@
 body {
-	background-color: #f9f9f9;
-	border-top: 2px solid #c0c0c0;
-	border-bottom: 2px solid #c0c0c0;
+	background-color: #fefefe;
 	color: #2b2b2b;
     font-family: 'Open Sans Condensed', sans-serif;
 }
 
-#primary-container {
+.primary-container {
 	margin: 0 auto;
-	width: 800px;
+	width: 960px;
 }
 
+/* Primary Header Area */
+
 #primary-header {
-	color: #01b5b8;
+	background-color: #10b5b8;
+	border-bottom: 1px solid #c0c0c0;
+	height: 150px;
+}
+
+#primary-header h1 {
+	color: #fefefe;
+	display: inline-block;
+	line-height: 150px;
+	float: left;
 	font-size: 3em;
-	margin: 10px 0 10px 0;
-	padding: 10px 0 20px 30px;
+}
+
+nav {
+	display: inline-block;
+	float: right;
 }
 
 .nav {
-	display: inline-block;
-   	background: #10b5b8;
-   	padding: 20px;
+   	background: #01a5a8;
    	border-radius: 4px;
-   	color: white;
-   	font-size: 1em;
+   	box-shadow: 0 2px 2px #aaaaaa;
+   	color: #fefefe;
+   	display: inline-block;
+   	font-size: 1.8em;
+   	margin-top: 42px;
+   	padding: 20px;
    	text-align: center;
    	text-decoration: none;
    	width: 100px;
@@ -34,22 +48,28 @@ body {
 	background-color: #01a5b8;
 }
 
+/* Secondary Header Area */
+
 #secondary-header {
-	border-top: 1px solid #c0c0c0;
 	border-bottom: 1px solid #c0c0c0;
 	font-size: 2.5em;
-	line-height: 65px;
-	margin: 10px 0 10px 0;
-	padding: 10px 30px 10px 30px;
+	padding: 50px 0;
+}
+
+#secondary-header h2 {
+	font-size: 2em;
 }
 
 #secondary-header p {
 	color: #01b5b8;
+	padding-top: 25px;
 }
 
+/* Primary Section Area */
+
 #primary-section {
-	margin: 60px 0 60px 0;
-	padding: 0 30px 0 30px;
+	background-color: #f9f9f9;
+	padding: 40px 0 20px 0;
 }
 
 .main-links {
@@ -59,10 +79,12 @@ body {
 .main-content {
 	background-color: #01b5b8;
 	border-radius: 5px;
+	box-shadow: 0 3px 3px #999999;
 	color: #f0f0f0;
-	font-size: 2em;
-	padding: 10px 15px 10px 15px;
-	margin: 20px 0 20px;
+	font-size: 2.5em;
+	line-height: 60px;
+	margin: 0 0 30px 0;
+	padding: 15px 15px 15px 15px;
 	text-align: center;
 }
 
@@ -76,19 +98,24 @@ body {
 
 .blog-content-heading {
 	color: #01b5b8;
-	font-size: 3.5em;
+	font-size: 4em;
+	padding-bottom: 40px;
 }
 
 .blog-content-paragraph {
 	font-size: 2.5em;
+	line-height: 50px;
+	padding-bottom: 40px;
 }
 
+/* Primary Footer Area */
+
 #primary-footer {
+	background-color: #eeeeee;
 	border-top: 1px solid #c0c0c0;
 	color: #01b5b8;
 	font-size: 1.7em;
-	margin: 20px 0 0 0;
-	padding: 20px 20px 0 20px;
+	padding: 45px 20px 0 20px;
 }
 
 #contentinfo {
@@ -99,13 +126,17 @@ body {
 	background: #1a1a1a;
 	border-radius: 5px;
 	color: #01b5b8;
-	padding: 3px 10px 11px 10px;
+	padding: 10px 10px 16px 10px;
 	text-align: center;
 }
 
+/* Secondary Footer Area */
+
 #secondary-footer {
+	background-color: #eeeeee;
 	font-size: 1.8em;
-	padding: 0 30px 0 30px;
+	line-height: 40px;
+	padding: 0 30px 35px 30px;
 }
 
 a {
@@ -125,29 +156,37 @@ ul {
 	padding: 0 0 15px 0;
 }
 
-@media (max-width: 830px) {
+.link-decoration {
+	font-style: italic;
+}
 
-	#primary-container {
-		width: 500px;
+/*@media (max-width: 1000px) {
+
+	.primary-container {
+		width: 100%;
 	}
 
 	#primary-header {
-		font-size: 1.8em;
-		margin: 10px 0 10px 0;
-		padding: 10px 0 20px 30px;
+		padding: 0 3% 0 3%;
+	}
+
+	#primary-header h1 {
+		font-size: 2em;
 	}
 
 	#secondary-header {
-		font-size: 1.5em;
-		line-height: 45px;
-		margin: 10px 0 10px 0;
-		padding: 10px 30px 10px 30px;
+		line-height: 50px;
+		padding: 30px 3% 30px 3%;
+	}
+
+	#secondary-header h2 {
+		font-size: 1.2em;
 	}
 
 	.nav {
+		margin-top: 48px;
    		padding: 20px;	
    		font-size: 1em;
-   		width: 50px;
 	}
 
 	#primary-section {
@@ -155,13 +194,19 @@ ul {
 		padding: 0 30px 0 30px;
 	}
 
+	.main-content {
+		line-height: 50px;
+	}
+
 	.main-content-heading {
 		font-size: 1em;
+		display: block;
+		width: 100%;
 	}
 	
 	#primary-footer {
 		font-size: 1.3em;
-		margin: 80px 0 20px 0;
+		margin: 80px 0 0 0;
 		padding: 20px 30px 0 30px;
 	}
 	
@@ -175,23 +220,47 @@ ul {
 
 }
 
-@media (max-width: 530px) {
-
-	#primary-container {
-		width: 100%;
-	}
+/*@media (max-width: 630px) {
 
 	#primary-header {
-		font-size: 1.2em;
-		margin: 10px 0 10px 0;
-		padding: 10px 0 20px 30px;
+		height: 100px;
 	}
+
+	#primary-header h1 {
+		display: block;
+		float: none;
+		font-size: 2em;
+		line-height: 100px;
+	}
+
+	nav {
+
+		display: none;
+		float: none;
+		margin: 0 auto;
+	}
+
+.nav {
+   	background: #01a5a8;
+   	border-radius: 4px;
+   	color: #fefefe;
+   	display: inline-block;
+   	font-size: 1.8em;
+   	margin-top: 42px;
+   	padding: 20px;
+   	text-align: center;
+   	text-decoration: none;
+   	width: 100px;
+}
+
+.nav:hover {
+	background-color: #01a5b8;
+}
 
 	#secondary-header {
 		font-size: 1.5em;
 		line-height: 45px;
-		margin: 10px 0 10px 0;
-		padding: 10px 30px 10px 30px;
+		padding: 30px 3% 30px 3%;
 	}
 
 	#primary-section {
@@ -215,4 +284,4 @@ ul {
 		padding: 3px 10px 11px 10px;
 	}
 
-}
+}*/
